# PICAnalysisTools

./: .gitignore  LICENSE  README.md  pyproject.toml
PICAnalysisTools/: Field_Properties.py  Laser_Properties.py  Particle_Properties.py  __init__.py  field_plotting.py  ionisation.py
PICAnalysisTools/core/: binning.py  histograms.py  rounding.py  unit_conversions.py
PICAnalysisTools/examples/: example_Laser_analysis.py  example_Phase_Space.py  example_field_plotting.py  example_field_properties.py  example_particle_properties.py  example_plasma_conversions.py  example_plot_ionisation_thresholds.py  example_unit_conversions.py
PICAnalysisTools/phys_calcs/: Gauss_beam_propagation.py  atomic_data.txt  ionisation.py  laser_calcs.py  plasma_calcs.py
PICAnalysisTools/plasma_acceleration/: lwfa_scaling.py  pwfa_scaling.py
PICAnalysisTools/plt_tools/: colour_list.py  plot_limits.py
PICAnalysisTools/tests/: Test_Laser_analysis.py  Test_Phase_Space.py  Test_field_properties.py  Test_particle_properties.py  test_field_plotting.py  test_plasma_conversions.py  test_plot_ionisation_thresholds.py  test_unit_conversions.py
PICAnalysisTools/utils/: Gauss_beam_propagation.py  Particle_Drift.py  atomic_data.txt  basic_calcs.py  binning.py  chemical_element_list.txt  distributions.py  elements.py  histograms.py  ionisation.py  laser_calcs.py  particle_selection.py  plasma_calcs.py  plot_limits.py  rounding.py  sim_path.py  statistics.py  unit_conversions.py  white_background_colormap.py
