[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PICAnalysisTools"
authors = [{name = "Lewis Reid", email = "Lewis.Reid@stfc.ac.uk"}]
requires-python = ">= 3.10"
readme = "README.md"
description = ""
license = {text = "BSD-3-Clause"}

keywords = []
dependencies = ["numpy", "scipy", "openpmd_viewer >= 1.9"]
classifiers = []
dynamic = ["version"]

[project.urls]
Homepage="https://github.com/lrreid/PICAnalysisTools"
Repository="https://github.com/lrreid/PICAnalysisTools.git"

[tool.setuptools.dynamic]
version = {attr = "PICAnalysisTools.__version__"}
