[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PICAnalysisTools"
authors = [{name = "Lewis Reid", email = "Lewis.Reid@stfc.ac.uk"}]
requires-python = ">= 3.10"
readme = "README.md"
description = "Python package with tools to extract data from PIC simulations using openPMD-viewer and preform analysis on the data."
license = {text = "BSD-3-Clause"}

keywords = []
dependencies = ["numpy", "scipy", "matplotlib", "openpmd_viewer >= 1.9", "openpmd-api"]
classifiers = []
dynamic = ["version"]

[project.urls]
Homepage="https://github.com/lrreid/PICAnalysisTools"
Repository="https://github.com/lrreid/PICAnalysisTools.git"

[tool.setuptools.dynamic]
version = {attr = "PICAnalysisTools.__version__"}
